--- a/pages/components/Header/styles.module.scss
+++ b/pages/components/Header/styles.module.scss
@@ -1,7 +1,8 @@
 .header {
     height: 44px;
     width: 100%;
-    position: fixed;
+    position: -webkit-sticky;
+    top: 0;
     background-color: rgba($color: rgb(22, 22, 22), $alpha: 0.8);
     -webkit-backdrop-filter: blur(20px) saturate(180%);
     backdrop-filter: blur(20px) saturate(180%);
